--- a/languages/commentpress-sof-de.pot
+++ b/languages/commentpress-sof-de.pot
@@ -1,356 +1,280 @@
-# Copyright (C) 2018 Christian Wach
-# This file is distributed under the same license as the CommentPress SOF Germany package.
+# Copyright (C) 2022 Christian Wach
+# This file is distributed under the .
 msgid ""
 msgstr ""
-"Project-Id-Version: CommentPress SOF Germany 1.3.17\n"
+"Project-Id-Version: CommentPress SOF Germany 1.4.4\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/theme/commentpress-sof-de\n"
-"POT-Creation-Date: 2018-05-05 18:41:08+00:00\n"
+"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"PO-Revision-Date: 2018-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"POT-Creation-Date: 2022-04-26T15:05:18+00:00\n"
+"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"X-Generator: WP-CLI 2.6.0\n"
+"X-Domain: commentpress-sof-de\n"
 
-#: archive-event.php:46 archive-event.php:49 archive-event.php:52
+#. Theme Name of the theme
+msgid "CommentPress SOF Germany"
+msgstr ""
+
+#. Theme URI of the theme
+msgid "http://www.futureofthebook.org/commentpress/"
+msgstr ""
+
+#. Description of the theme
+msgid "A child of the CommentPress Flat Theme for <em>CommentPress Core</em>."
+msgstr ""
+
+#. Author of the theme
+msgid "Christian Wach"
+msgstr ""
+
+#. Author URI of the theme
+msgid "http://www.haystack.co.uk"
+msgstr ""
+
+msgid "Earlier Events"
+msgstr ""
+
+msgid "Later Events"
+msgstr ""
+
 msgid "Events: "
 msgstr ""
 
-#: archive-event.php:55
 msgid "Upcoming Events"
 msgstr ""
 
-#: archive-event.php:57
 msgid "Events"
 msgstr ""
 
-#: archive-event.php:68 archive.php:66
-#: assets/widgets/latest-ball-post-widget.php:123 category.php:67 index.php:49
-#: taxonomy-event-category.php:61 taxonomy-event-tag.php:61
-#: taxonomy-event-venue.php:62
 msgid "Permanent Link to"
 msgstr ""
 
-#: archive-event.php:107 archive.php:88 category.php:89 full-width.php:98
-#: index.php:71 taxonomy-event-category.php:100 taxonomy-event-tag.php:100
-#: taxonomy-event-venue.php:101
 msgid "Tags: "
 msgstr ""
 
-#: archive-event.php:107 archive.php:88 category.php:89 full-width.php:98
-#: index.php:71 taxonomy-event-category.php:100 taxonomy-event-tag.php:100
-#: taxonomy-event-venue.php:101
 msgid "Posted in"
 msgstr ""
 
-#: archive-event.php:107 archive.php:88 category.php:89 index.php:71
-#: taxonomy-event-category.php:100 taxonomy-event-tag.php:100
-#: taxonomy-event-venue.php:101
 msgid "Edit"
 msgstr ""
 
-#: archive-event.php:107 archive.php:88 category.php:89 index.php:71
-#: taxonomy-event-category.php:100 taxonomy-event-tag.php:100
-#: taxonomy-event-venue.php:101
 msgid "No Comments &#187;"
 msgstr ""
 
-#: archive-event.php:107 archive.php:88 category.php:89 index.php:71
-#: taxonomy-event-category.php:100 taxonomy-event-tag.php:100
-#: taxonomy-event-venue.php:101
 msgid "1 Comment &#187;"
 msgstr ""
 
-#: archive-event.php:107 archive.php:88 category.php:89 index.php:71
-#: taxonomy-event-category.php:100 taxonomy-event-tag.php:100
-#: taxonomy-event-venue.php:101
 msgid "% Comments &#187;"
 msgstr ""
 
-#: archive-event.php:119 archive.php:98 category.php:99
-#: geo-mashup-full-post.php:38 geo-mashup-info-window-max.php:43
-#: geo-mashup-info-window.php:93
 msgid "Not Found"
 msgstr ""
 
-#: archive-event.php:121
 msgid "Apologies, but no results were found for the requested archive."
 msgstr ""
 
-#: archive.php:46 category.php:46
 msgid "Posts Tagged &#8216;%s&#8217;"
 msgstr ""
 
-#: archive.php:48 archive.php:50 archive.php:52
 msgid "Archive for"
 msgstr ""
 
-#: archive.php:48
 msgid "F jS, Y"
 msgstr ""
 
-#: archive.php:50
 msgid "F, Y"
 msgstr ""
 
-#: archive.php:52
 msgid "Y"
 msgstr ""
 
-#: archive.php:54
 msgid "Author Archive"
 msgstr ""
 
-#: archive.php:56 category.php:48
 msgid "Archives"
 msgstr ""
 
-#: archive.php:100 category.php:101 front-page.php:83 full-width.php:166
-msgid "Sorry, but you are looking for something that isn't here."
+msgid "Sorry, but you are looking for something that isn’t here."
 msgstr ""
 
-#: assets/templates/activity_sidebar.php:33
 msgid "Recent Comments on this %s"
 msgstr ""
 
-#: assets/templates/activity_sidebar.php:51
 msgid "Recent Comments in this Document"
 msgstr ""
 
-#: assets/templates/activity_sidebar.php:72
 msgid "Activity"
 msgstr ""
 
-#: assets/widgets/latest-ball-post-widget.php:41
+msgid "Recent Activity in your Documents"
+msgstr ""
+
+msgid "Recent Activity in Public Documents"
+msgstr ""
+
+msgid "Recently Active Members"
+msgstr ""
+
+msgid "Who's Online"
+msgstr ""
+
 msgid "Displays the most recent \"Daily Ballblog\" that the visitor can read."
 msgstr ""
 
-#: assets/widgets/latest-ball-post-widget.php:46
 msgctxt "widget name"
 msgid "Latest Ball Post"
 msgstr ""
 
-#: assets/widgets/latest-ball-post-widget.php:134
 msgid "Read more..."
 msgstr ""
 
-#: assets/widgets/latest-ball-post-widget.php:176
 msgid "Latest Ballblog Post"
 msgstr ""
 
-#: assets/widgets/latest-ball-post-widget.php:182
 msgid "Title:"
 msgstr ""
 
-#: footer.php:31
 msgid "Website content &copy; %1$s %2$s. All rights reserved."
 msgstr ""
 
-#: front-page.php:81 full-width.php:165
 msgid "Page Not Found"
 msgstr ""
 
-#: full-width.php:126
+#. Template Name of the theme
+msgid "Full Width"
+msgstr ""
+
 msgid "Page %s"
 msgstr ""
 
-#: functions.php:328
 msgid "Something"
 msgstr ""
 
-#: functions.php:387
 msgid "Homepage Left"
 msgstr ""
 
-#: functions.php:389
 msgid "An optional widget area on the left of the Homepage"
 msgstr ""
 
-#: functions.php:398
 msgid "Homepage Right"
 msgstr ""
 
-#: functions.php:400
 msgid "An optional widget area on the right of the Homepage"
 msgstr ""
 
-#: functions.php:409
 msgid "Homepage Lower"
 msgstr ""
 
-#: functions.php:411
 msgid "An optional widget area below the left and right widgets on the Homepage"
 msgstr ""
 
-#: functions.php:420
 msgid "Member Homepage Left"
 msgstr ""
 
-#: functions.php:422
 msgid "Add widgets to the Member Homepage left column here."
 msgstr ""
 
-#: functions.php:431
 msgid "Member Homepage Right"
 msgstr ""
 
-#: functions.php:433
 msgid "Add widgets to the Member Homepage right column here."
 msgstr ""
 
-#: functions.php:640
 msgid "Latest Comments"
 msgstr ""
 
-#: geo-mashup-full-post.php:39 geo-mashup-info-window-max.php:44
-#: geo-mashup-info-window.php:94
-msgid "Sorry, but you are looking for something that isn’t here."
-msgstr ""
-
-#: geo-mashup-info-window.php:68
 msgid "Written by %1$s on %2$s"
 msgstr ""
 
-#: geo-mashup-info-window.php:68
 msgid "l, F jS, Y"
 msgstr ""
 
-#: geo-mashup-info-window.php:77 geo-mashup-info-window.php:82
 msgid "Read full story..."
 msgstr ""
 
-#: index.php:79
 msgid "No blog posts found"
 msgstr ""
 
-#: index.php:81
 msgid "There are no blog posts yet."
 msgstr ""
 
-#: index.php:87
 msgid "Go to your dashboard to add one."
 msgstr ""
 
-#: index.php:93
-msgid "If you were looking for something that hasn't been found, try using the search form below."
+msgid "If you were looking for something that hasn’t been found, try using the search form below."
 msgstr ""
 
-#: single-event.php:67
 msgid "Event Details"
 msgstr ""
 
-#: single-event.php:76
 msgid "This event is running from %1$s until %2$s. It is next occurring on %3$s"
 msgstr ""
 
-#: single-event.php:80
 msgid "This event finished on %s"
 msgstr ""
 
-#: single-event.php:88
 msgid "Date"
 msgstr ""
 
-#: single-event.php:97
 msgid "Categories"
 msgstr ""
 
-#: single-event.php:101
 msgid "Tags"
 msgstr ""
 
-#: single-event.php:116
 msgid "Upcoming Dates"
 msgstr ""
 
-#: single-event.php:158
 msgid "RSS 2.0"
 msgstr ""
 
-#: single-event.php:165
 msgid "You can follow any comments on this entry through the %s feed."
 msgstr ""
 
-#: single-event.php:177 single-event.php:196
 msgid "trackback"
 msgstr ""
 
-#: single-event.php:184
 msgid "You can leave a comment, or %s from your own site."
 msgstr ""
 
-#: single-event.php:203
 msgid "Comments are currently closed, but you can %s from your own site."
 msgstr ""
 
-#: single-event.php:213
 msgid "You can leave a comment. Pinging is currently not allowed."
 msgstr ""
 
-#: single-event.php:221
 msgid "Both comments and pings are currently closed."
 msgstr ""
 
-#: single-event.php:229
 msgid "Edit this entry"
 msgstr ""
 
-#: single-event.php:261
 msgid "Post Not Found"
 msgstr ""
 
-#: single-event.php:262
 msgid "Sorry, no posts matched your criteria."
 msgstr ""
 
-#: taxonomy-event-category.php:43
 msgid "Event Category: %s"
 msgstr ""
 
-#: taxonomy-event-category.php:110 taxonomy-event-tag.php:113
-#: taxonomy-event-venue.php:114
 msgid "Nothing Found"
 msgstr ""
 
-#: taxonomy-event-category.php:112
-msgid "Apologies, but no results were found for the requested category. "
+msgid "Apologies, but no results were found for the requested category."
 msgstr ""
 
-#: taxonomy-event-tag.php:43
-msgid "Terminschlagwort: %s"
+msgid "Event Tag: %s"
 msgstr ""
 
-#: taxonomy-event-tag.php:117
-msgid "Apologies, but no events were found for the requested tag. "
+msgid "Apologies, but no results were found for the requested tag."
 msgstr ""
 
-#: taxonomy-event-venue.php:43
 msgid "Events at: %s"
 msgstr ""
 
-#: taxonomy-event-venue.php:117
-msgid "Apologies, but no events were found for the requested venue. "
-msgstr ""
-#. Theme Name of the plugin/theme
-msgid "CommentPress SOF Germany"
-msgstr ""
-
-#. Theme URI of the plugin/theme
-msgid "http://www.futureofthebook.org/commentpress/"
-msgstr ""
-
-#. Description of the plugin/theme
-msgid "A child of the CommentPress Flat Theme for <em>CommentPress Core</em>."
-msgstr ""
-
-#. Author of the plugin/theme
-msgid "Christian Wach"
-msgstr ""
-
-#. Author URI of the plugin/theme
-msgid "http://www.haystack.co.uk"
-msgstr ""
-
-#. Template Name of the plugin/theme
-msgid "Full Width"
+msgid "Apologies, but no events were found for the requested venue."
 msgstr ""
